@@ -65,6 +65,26 @@
 
             </summary>
             <bugs>
+                 <bug id="1439" tool="jira">
+                     <description>
+		                Added test case for Castor JDO CTF to test database.isPersistent().
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>JDO</module>
+                    <date>20060529</date>
+                </bug>                
                  <bug id="1432" tool="jira">
                      <description>
 		                Fixed problem with numbered parameters in SQL pass-through queries.
